# multi-tenant-ai-chatbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTH.md  BLOCKED.md  CLAUDE.md  CONTRACT.md  Concierge_UI_Blueprint.md  DECISIONS.md  DESIGN.md  Dockerfile  EVALS.md  Makefile  PROJECT_PLAN.md  README.md  RUNBOOK.md  SECURITY.md  SPEC.md  UI-spec.md  alembic.ini  backend-spec.md  demo-instructions.md  docker-compose.yml  eval_thresholds.yaml  naser-files.md  pyproject.toml  queries.md  summary.md  what-amer-worked.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
admin/: __init__.py  _admin_http.py  _empty.py  _kpi.py  _status_pill.py  _table.py  accept_invite_page.py  access_denied_page.py  agent_settings_page.py  audit_page.py  auth_state.py  brand.py  cms_page.py  escalations_page.py  guardrails_page.py  invites_page.py  leads_page.py  login_page.py  overview_page.py  platform_dashboard_page.py  settings_page.py  streamlit_app.py  tenant_dashboard.py  tenant_page.py  tenants_page.py  usage_page.py  widget_page.py
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  agent.py  router.py  tools.py
app/api/: __init__.py  deps.py
app/db/: __init__.py  models.py  rls.py  session.py
app/domain/: __init__.py  admin_auth.py  admin_invite.py  chat.py  cms.py  lead.py  tenant.py  widget.py
app/evals/: __init__.py  red_team_cases.yaml
app/infra/: __init__.py  blob.py  cache.py  guardrails.py  http_clients.py  llm.py  modelserver.py  password.py  redaction.py  service_auth.py  tracing.py  vault.py
app/prompts/: __init__.py  loader.py  system_prompt.md
app/rag/: __init__.py  ingest.py  retriever.py
app/repositories/: __init__.py  admin_invite_repo.py  admin_user_repo.py  agent_config_repo.py  (+6 more)
data/: concierge_combined_public_router_dataset.csv  concierge_full_router_dataset.csv
evals/: __init__.py  agent_tool.py  agent_tool_selection_cases.json  classifier.py  rag.py  rag_cases.json  red_team.py  redaction.py  router_distribution.py  section_b_report.py
guardrails/: __init__.py  main.py
modelserver/: __init__.py  app.py  classifier.py  main.py  model_card.json
scripts/: __init__.py  check_bundle_size.py  check_lean_images.sh  check_threshold.py  seed_admin.py  seed_demo.py  seed_tenants.py  seed_widget_config.py  smoke_check.py  vault_seed.py
specs/: guardrails_SPEC.md  modelserver_SPEC.md  redaction_SPEC.md  service_auth_SPEC.md  tracing_SPEC.md
week8_multi_ai_tenant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+295 files in other folders)
