[project]
name = "week8-multi-ai-tenant"
version = "0.1.0"
description = "Multi-tenant AI SaaS concierge platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "alembic",
    "psycopg2-binary",
    "fastapi-users[sqlalchemy]",
    "redis",
    "rq",
    "miniopy-async",
    "hvac",
    "structlog",
    "httpx",
    "pyjwt",
    "bcrypt",
    "python-multipart",
    "scikit-learn",
    "joblib",
    "onnxruntime",
    "numpy",
    "streamlit",
    "anthropic>=0.40",
    "groq>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "types-redis",
]

[tool.setuptools.packages.find]
include = ["app*", "admin*", "guardrails*", "modelserver*"]
exclude = ["frontend*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# T101: ban new imports of legacy modules that have been removed or are slated
# for removal. `app.services.cms_service` was deleted in feature 010 Phase 7
# (T096); `app.services.admin_settings` is retained for now (still imported by
# admin_auth and tests) but its name overlaps the new `tenant_settings_service`
# surface — guard against accidental new usage from non-auth callers.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"app.services.cms_service".msg = "app.services.cms_service was removed in feature 010 T096. Use app.repositories.cms_repo + app.domain.cms instead."

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
